--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
   "dependencies": {
     "apiai": "^4.0.3",
     "axios": "^0.17.0",
+    "body-parser": "^1.18.2",
+    "connect": "^3.6.5",
     "express": "^4.16.2",
+    "mongoose": "^4.12.4",
+    "promise-redis": "0.0.5",
+    "redis": "^2.8.0",
     "save": "^2.3.1",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "when": "^3.7.8",
+    "winston": "^2.4.0"
   }
 }
