--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redis": "^2.8.0",
     "save": "^2.3.1",
     "socket.io": "^2.0.4",
+    "underscore": "^1.8.3",
     "when": "^3.7.8",
     "winston": "^2.4.0"
   }
