--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "connect": "^3.6.5",
+    "dialogflow": "^1.1.1",
     "express": "^4.16.2",
     "mongoose": "^4.12.4",
     "promise-redis": "0.0.5",
@@ -29,6 +30,7 @@
     "save": "^2.3.1",
     "socket.io": "^2.0.4",
     "underscore": "^1.8.3",
+    "uuid": "^3.4.0",
     "when": "^3.7.8",
     "winston": "^2.4.0"
   }
